--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>CRWN - Shop affordable clothing.</title>
   </head>
   <body>
     <div id="root"></div>
